Fixes, added media hover effects

--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -17,26 +17,34 @@ body
         left: 0
         top: 96%
         z-index: 102
+        font-size: 14px
     &_phone
         position: absolute
         left: 0
         top: 96%
         z-index: 102
+        font-size: 14px
     &_email
         position: absolute
         left: 0
         top: 96%
         z-index: 102
+        font-size: 14px
 .newsletter-error
     &_email
         position: absolute
         top: 100%
+        font-size: 16px
 .footer-error
     &_name
         position: absolute
         left: 0
         top: 100%
+        font-size: 14px
+        z-index: 20px
     &_phone
         position: absolute
         left: 0
         top: 100%
+        font-size: 14px
+        z-index: 20px
