--- a/sass/blocks/_packages.sass
+++ b/sass/blocks/_packages.sass
@@ -45,6 +45,7 @@
             grid-template-rows: repeat(6, max-content)
             padding: 46px 21px 30px 43px
             color: $color-w
+            overflow-y: auto
             .stars
                 margin-bottom: 6px
                 font-size: 0
@@ -120,8 +121,6 @@
             color: $color-w
             border-radius: 4px
             background-color: $primary
-            &:hover
-                background-color: #A81833
     .properties
         font-size: 0
         &__item
