--- a/sass/blocks/_review.sass
+++ b/sass/blocks/_review.sass
@@ -69,6 +69,8 @@
                     margin-right: 0
         &__text
             max-width: 537px
+            max-height: 300px
+            overflow-y: auto
             margin: 0 auto
             font-size: 12px
             line-height: 160%
@@ -96,4 +98,3 @@
                 height: 18px
                 fill: #828282
                 opacity: 0.8
-            
