--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -1,3 +1,62 @@
+@media (pointer:fine) and (min-width: 993px)
+    .navbar
+        .search
+            &__button
+                &:hover
+                    background-color: #A81833
+        .user
+            &:hover
+                text-decoration: underline
+        &-menu
+            &__link
+                &:hover
+                    text-decoration: underline
+    .hotel
+        .booking-card
+            &__phone
+                .number
+                    &:hover
+                        text-decoration: underline
+            &__button
+                &:hover
+                    background-color: #A81833
+    .packages
+        .content
+            &__button
+                &:hover
+                    background-color: #A81833
+    .newsletter
+        .subscribe
+            &__button
+                &:hover
+                    background-color: #A81833
+    .activities
+        .activity
+            &__button
+                &:hover
+                    background-color: #A81833
+    .footer
+        &-top
+            .item__link
+                &:hover
+                    text-decoration: underline
+        &-contact
+            &__link
+                &:hover
+                    text-decoration: underline
+            .form
+                &__button
+                    &:hover
+                        background-color: #A81833
+        &-bottom
+            &__link
+                &:hover
+                    text-decoration: underline
+    .modal
+        &__button
+            &:hover
+                background-color: #A81833
+
 @media ( max-width: 1200px )
     .container
         width: 960px
@@ -32,12 +91,6 @@
                 margin-left: 7%
                 &__input
                     width: 340px
-                &__button
-                    &:hover
-                        background-color: $primary
-            .user
-                &:hover
-                    text-decoration: none
     .navbar
         &-bottom
             .container
@@ -47,8 +100,6 @@
             &__link
                 font-size: 12px
                 line-height: 15px
-                &:hover
-                    text-decoration: none
     .hotel
         padding-bottom: 60px
         &-grid
@@ -61,13 +112,6 @@
             .booking-card
                 width: 340px
                 padding: 27px 22px
-                &__phone
-                    .number
-                        &:hover
-                            text-decoration: none
-                &__button
-                    &:hover
-                        background-color: $primary
             .map
                 width: 340px
     .packages
@@ -86,18 +130,10 @@
                 margin-bottom: 40px
             &__properties
                 margin-bottom: 40px
-        .content
-            &__button
-                &:hover
-                    background-color: $primary
     .newsletter
         &__wrapper
             width: 700px
             padding: 92px 0
-        .subscribe
-            &__button
-                &:hover
-                    background-color: $primary
     .reviews
         padding: 40px 0 60px
         &__title
@@ -128,9 +164,6 @@
             margin-bottom: 20px
             &__text
                 left: 27px
-            &__button
-                &:hover
-                    background-color: $primary
     .footer
         padding: 73px 0 33px
         &-top
@@ -159,10 +192,6 @@
             &__links
                 margin-left: -10px
                 margin-bottom: -5px
-            .list
-                .item__link
-                    &:hover
-                        text-decoration: none
             &__title
                 &_nm
                     width: 200px
@@ -176,30 +205,17 @@
             margin-bottom: 52px
             &__title
                 margin: 0 0 24px
-            &__link
-                &:hover
-                    text-decoration: none
             .form-title
                 margin-bottom: 34px
-            .form__button
-                &:hover
-                    background-color: $primary
         &-bottom
             grid-template-columns: 283px 1fr 1fr
             &__link-wrapper
                 grid-column: 1/2
-            &__link
-                &:hover
-                    text-decoration: none
     .modal
         &__dialog
             width: 400px
             padding: 33px 66px
-        &__button
-            &:hover
-                background-color: $primary
-    .invalid
-        font-size: 14px
+
 @media ( max-width: 992px ) and (max-height: 500px) and (orientation: landscape)
     .modal
         &__dialog
@@ -504,15 +520,16 @@
             width: 100%
         &__txt
             display: none
-    .invalid
-        font-size: 12px
     .modal-error
         &_name
             top: 65%
+            font-size: 12px
         &_phone
             top: 65%
+            font-size: 12px
         &_email
             top: 60%
+            font-size: 12px
 @media ( max-width: 619px )
     body
         padding-top: 72px
@@ -622,6 +639,8 @@
                 .name
                     flex-basis: 100%
                     margin: 10px 0 5px 0
+                .description
+                    flex-basis: 85%
         &-rating
             display: none
         &-grid
@@ -699,6 +718,7 @@
         .subscribe
             &__input
                 width: 280px
+                padding: 0 75px 0 20px
     .reviews
         padding: 40px 0 50px 0
         &__title
@@ -798,6 +818,11 @@
             row-gap: 10px
             &__link-wrapper
                 grid-row: 1/2
+                justify-content: start
+            &__link
+                margin-right: 15px
+                &:last-child
+                    margin-right: 0
             &__logo-wrapper
                 grid-column: 1/2
                 grid-row: 2/3
@@ -813,15 +838,16 @@
             margin-bottom: 15px
         &__button
             width: 100%
-    .invalid
-        font-size: 12px
     .modal-error
         &_name
             top: 100%
+            font-size: 12px
         &_phone
             top: 100%
+            font-size: 12px
         &_email
             top: 100%
+            font-size: 12px
 @media ( max-width: 619px ) and (max-height: 500px) and (orientation: landscape)
     .modal
         &__dialog
@@ -864,7 +890,10 @@
     .modal-error
         &_name
             top: 65%
+            font-size: 12px
         &_phone
             top: 65%
+            font-size: 12px
         &_email
             top: 60%
+            font-size: 12px
