--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -177,6 +177,7 @@
             &__logo
                 width: 94px
                 height: 110px
+                margin-bottom: 0
             &__categories
                 grid-row: 2/3
             &__additional-info
