--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -93,12 +93,24 @@
             align-items: start
             margin-bottom: 22px
         &__icon
+
+            margin-right: 18px
+            fill: #bdbdbd
+        .location-icon
             min-width: 21px
             width: 21px
             min-height: 21px
             height: 21px
-            margin-right: 18px
-            fill: #bdbdbd
+        .phone-icon
+            min-width: 21px
+            width: 21px
+            min-height: 21px
+            height: 21px
+        .mail-icon
+            min-width: 18px
+            width: 18px
+            min-height: 15px
+            height: 15px
         .details__title
             margin-top: 13px
         .form-title
