--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -56,6 +56,10 @@
         &__button
             &:hover
                 background-color: #A81833
+    .thank-you
+        &__button
+            &:hover
+                background-color: #A81833
 
 @media ( max-width: 1200px )
     .container
