--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -15,19 +15,19 @@ body
     &_name
         position: absolute
         left: 0
-        top: 96%
+        bottom: 2px
         z-index: 102
         font-size: 14px
     &_phone
         position: absolute
         left: 0
-        top: 96%
+        bottom: 2px
         z-index: 102
         font-size: 14px
     &_email
         position: absolute
         left: 0
-        top: 96%
+        bottom: 2px
         z-index: 102
         font-size: 14px
 .newsletter-error
@@ -39,12 +39,12 @@ body
     &_name
         position: absolute
         left: 0
-        top: 100%
+        bottom: 2px
         font-size: 14px
         z-index: 20px
     &_phone
         position: absolute
         left: 0
-        top: 100%
+        bottom: 2px
         font-size: 14px
         z-index: 20px
