--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -14,19 +14,19 @@ body
 .modal-error
     &_name
         position: absolute
-        left: 0
+        left: 2px
         bottom: 2px
         z-index: 102
         font-size: 14px
     &_phone
         position: absolute
-        left: 0
+        left: 2px
         bottom: 2px
         z-index: 102
         font-size: 14px
     &_email
         position: absolute
-        left: 0
+        left: 2px
         bottom: 2px
         z-index: 102
         font-size: 14px
@@ -38,13 +38,13 @@ body
 .footer-error
     &_name
         position: absolute
-        left: 0
+        left: 2px
         bottom: 2px
         font-size: 14px
         z-index: 20px
     &_phone
         position: absolute
-        left: 0
+        left: 2px
         bottom: 2px
         font-size: 14px
         z-index: 20px
